fixed referrer, fixed gridTop on mobile
fixed the referrer if statement in the js, added height styles for
#gridTop in order to compensate for the js update earlier

--- a/one_aig_individuals_emea.css
+++ b/one_aig_individuals_emea.css
@@ -1513,18 +1513,22 @@ display:none;
     float: none;
     display: block;
   }
+
+  #gridTop, #gridTop #pageBanner {
+    height: auto;
+  }
 }
-/* mobile overlay css */
-#bg {
-    bottom: 0;
-    display: none;
-    height: 100%;
-    left: 0;
-    margin: 0;
-    opacity: 0.4;
-    overflow: visible;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
+  /* mobile overlay css */
+  #bg {
+      bottom: 0;
+      display: none;
+      height: 100%;
+      left: 0;
+      margin: 0;
+      opacity: 0.4;
+      overflow: visible;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
 }
